# gophermaps-backend

./: .gitignore  Dockerfile  README.md  compose.yaml  local_tests.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ecs.yaml  ecs.yml  main_gophermaps-api.yml
app/: main.py
config/: .env  unit.conf.json
db/: README.md
nginx/: README.md
service/: README.md  main.py
web/: README.md  instruction-text.md
web/img/: README.md
web/instructions/test1-test2/: instructions.md
web/thumbnails/: README.md
