[tool.poetry]
name = "gophermaps-backend"
version = "0.1.0"
description = "Rest API for the GopherMaps project"
authors = ["Ryan <roche189@umn.edu>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.0"
uvicorn = "^0.30.5"
neo4j = "^5.23.1"


[tool.poetry.group.dev.dependencies]
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
